--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,26 @@ jobs:
       - run: |
           npm install
           npm run test 
-
+  #---------------------------------------------------------------------------------------------
+  #---------------------------------------------------------------------------------------------
+  upload-docker:
+    docker:
+      - image: circleci/golang:1.15
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.14
+      - run:
+          name: Build docker image
+          command: |
+            docker build --tag=$DOCKER_IMAGE_NAME .
+      - run:
+          name: Push Docker Image
+          command: |
+            echo "Docker ID and Image: $DOCKER_IMAGE_NAME"
+            docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+            docker tag $DOCKER_IMAGE_NAME $DOCKER_REPO/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
+            docker push $DOCKER_REPO/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
 
 workflows:
   say-hello-workflow:
