--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,8 @@ jobs:
           command: |
             echo "Docker ID and Image: $DOCKER_IMAGE_NAME"
             docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-            docker tag $DOCKER_IMAGE_NAME $DOCKER_REPO/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
-            docker push $DOCKER_REPO/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
+            docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
+            docker push $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
 
 workflows:
   say-hello-workflow:
