--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,9 +63,8 @@ workflows:
       #     requires: [test]
       - aws-ecr/build-and-push-image:
           name: build-and-push-image-ecr
-          account-url: ${AWS_ECR_URL}
-          region: ${AWS_DEFAULT_REGION}
+          registry-id: 193429901127
+          region: AWS_DEFAULT_REGION
           repo: capstone_app
-          dockerfile: ~/project/Dockerfile
           path: ~/project/
           tag: ${CIRCLE_WORKFLOW_ID:0:7}
