--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ workflows:
       - aws-ecr/build-and-push-image:
           name: build-and-push-image-ecr
           registry-id: AWS_ECR_REGISTRY_ID
-          region: ${AWS_REGION}
+          region: ${AWS_DEFAULT_REGION}
           repo: capstone_app
           path: ~/project/
           tag: ${CIRCLE_WORKFLOW_ID:0:7}
