--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,20 @@ jobs:
             docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
             docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
             docker push $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
-
+  deploy-application:
+    executor: aws-eks/python3
+    steps:
+      - checkout
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: << parameters.cluster-name >>
+          install-kubectl: true
+          aws-region: ${AWS_DEFAULT_REGION}
+      - kubernetes/create-or-update-resource:
+          resource-file-path: "deployments/deployment.yml"
+          get-rollout-status: true
+          resource-name: deployment/capstone
+      - kubernetes/create-or-update-resource:
+          resource-file-path: "deployments/deployment.yml"
 workflows:
   capstone-workflow:
     jobs:
@@ -68,7 +81,11 @@ workflows:
       #     repo: capstone_app
       #     tag: ${CIRCLE_WORKFLOW_ID:0:7}
       - aws-eks/create-cluster:
-          cluster-name: eks-cluster-deployment-${CIRCLE_WORKFLOW_ID:0:7}
-          aws-region: ${AWS_DEFAULT_REGION}
+          cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
+          aws-region: $AWS_DEFAULT_REGION
+          zones: "${AWS_DEFAULT_REGION}a, ${AWS_DEFAULT_REGION}b, ${AWS_DEFAULT_REGION}c, ${AWS_DEFAULT_REGION}d"
           # requires:
           #   - build-and-push-image-ecr
+      - deploy-application:
+          requires:
+            - aws-eks/create-cluster
