--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,8 @@ jobs:
             docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
             docker push $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
   deploy-application:
-    executor: aws-eks/python3
+    docker:
+      - image: cimg/python:3.10
     steps:
       - checkout
       - aws-eks/update-kubeconfig-with-authenticator:
