--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,8 @@ jobs:
           resource-file-path: "deployments/deployment.yml"
           get-rollout-status: true
           resource-name: deployment/capstone
-      # - kubernetes/create-or-update-resource:
-      #     resource-file-path: "deployments/deployment.yml"
+      - kubernetes/create-or-update-resource:
+          resource-file-path: "deployments/deployment.yml"
 workflows:
   capstone-workflow:
     jobs:
