--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,18 +50,33 @@ jobs:
           command: |
             echo "Docker ID and Image: $DOCKER_IMAGE_NAME"
             docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-            docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
-            docker push $DOCKER_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_WORKFLOW_ID
+            docker tag $DOCKER_IMAGE_NAME $DOCKER_USERNAME/$DOCKER_IMAGE_NAME
+            docker push $DOCKER_USERNAME/$DOCKER_IMAGE_NAME
+  #---------------------------------------------------------------------------------------------
+  #---------------------------------------------------------------------------------------------         
   deploy-application:
     docker:
       - image: cimg/python:3.10
+    parameters:
+        cluster-name:
+          description: |
+            Name of the EKS cluster
+          type: string
+        docker-image-name:
+          description: |
+            Name of the docker image to be deployed
+          type: string
+        aws-region:
+          description: |
+            AWS region
+          type: string
+          default: "us-west-2"
     steps:
       - checkout
       - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: eks-deployment-6ea2263
-          # cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
+          cluster-name: << parameters.cluster-name >>
           install-kubectl: true
-          aws-region: ${AWS_DEFAULT_REGION}
+          aws-region: << parameters.aws-region >>
       - kubernetes/create-or-update-resource:
           resource-file-path: "deployments/deployment.yml"
           get-rollout-status: true
@@ -71,22 +86,25 @@ jobs:
 workflows:
   capstone-workflow:
     jobs:
-      # - build
-      # - test:
-      #     requires: [build]
-      # - upload-docker:
-      #     requires: [test]
-      # - aws-ecr/build-and-push-image:
-      #     name: build-and-push-image-ecr
-      #     registry-id: AWS_ECR_REGISTRY_ID
-      #     region: ${AWS_DEFAULT_REGION}
-      #     repo: capstone_app
-      #     tag: ${CIRCLE_WORKFLOW_ID:0:7}
-      # - aws-eks/create-cluster:
-      #     cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
-      #     aws-region: $AWS_DEFAULT_REGION
-      #     requires:
-      #       - build-and-push-image-ecr
-      - deploy-application
-      #     requires:
-      #       - aws-eks/create-cluster
+      - build
+      - test:
+          requires: [build]
+      - upload-docker:
+          requires: [test]
+      - aws-ecr/build-and-push-image:
+          name: build-and-push-image-ecr
+          registry-id: AWS_ECR_REGISTRY_ID
+          region: ${AWS_DEFAULT_REGION}
+          repo: capstone_app
+          tag: ${CIRCLE_WORKFLOW_ID:0:7}
+      - aws-eks/create-cluster:
+          cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
+          aws-region: $AWS_DEFAULT_REGION
+          requires:
+            - build-and-push-image-ecr
+      - deploy-application:
+          cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
+          aws-region: $AWS_DEFAULT_REGION
+          docker-image-name: "${AWS_ECR_REGISTRY_ID}.dkr.ecr.us-east-1.amazonaws.com/capstone_app:${CIRCLE_WORKFLOW_ID:0:7}"
+          requires:
+            - aws-eks/create-cluster
