--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,8 @@ workflows:
           region: ${AWS_DEFAULT_REGION}
           repo: capstone_app
           tag: ${CIRCLE_WORKFLOW_ID:0:7}
+          requires:
+            [upload-docker]
       - aws-eks/create-cluster:
           cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
           aws-region: $AWS_DEFAULT_REGION
