--- a/deployments/deployment.yml
+++ b/deployments/deployment.yml
@@ -15,7 +15,7 @@ spec:
         app: capstone
     spec:
       containers:
-      - name: app
+      - name: capstone
         image: blackmkey/my-app:latest
         resources:
           requests:
