--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,27 +85,28 @@ jobs:
           resource-file-path: "deployments/deployment.yml"
 
   test-application:
-        executor: aws-eks/python3
-        parameters:
-          cluster-name:
-            description: |
-              Name of the EKS cluster
-            type: string
-          aws-region:
-            description: |
-              AWS region
-            type: string
-            default: "us-east-1"
-        steps:
-          - aws-eks/update-kubeconfig-with-authenticator:
-              cluster-name: << parameters.cluster-name >>
-              install-kubectl: true
-              aws-region: << parameters.aws-region >>
-          - run:
-              name: Wait for service to be ready
-              command: |
-                kubectl get pods
-                kubectl get services
+    docker:
+      - image: cimg/python:3.10
+    parameters:
+      cluster-name:
+        description: |
+          Name of the EKS cluster
+        type: string
+      aws-region:
+        description: |
+          AWS region
+        type: string
+        default: "us-east-1"
+    steps:
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: << parameters.cluster-name >>
+          install-kubectl: true
+          aws-region: << parameters.aws-region >>
+      - run:
+          name: Wait for service to be ready
+          command: |
+            kubectl get pods
+            kubectl get services
 workflows:
   capstone-workflow:
     jobs:
