--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,10 @@ workflows:
       - build
       - test:
           requires: [build]
+          filters:
+            branches:
+              only:
+                - master
       - upload-docker:
           requires: [test]
       - aws-ecr/build-and-push-image:
@@ -120,7 +124,7 @@ workflows:
           registry-id: AWS_ECR_REGISTRY_ID
           region: ${AWS_DEFAULT_REGION}
           repo: capstone_app
-          tag: ${CIRCLE_WORKFLOW_ID:0:7}
+          tag: v1
           requires:
             [upload-docker]
       - aws-eks/create-cluster:
@@ -131,7 +135,7 @@ workflows:
       - deploy-application:
           cluster-name: eks-deployment-${CIRCLE_WORKFLOW_ID:0:7}
           aws-region: $AWS_DEFAULT_REGION
-          docker-image-name: "${AWS_ECR_REGISTRY_ID}.dkr.ecr.us-east-1.amazonaws.com/capstone_app:${CIRCLE_WORKFLOW_ID:0:7}"
+          docker-image-name: "${AWS_ECR_REGISTRY_ID}.dkr.ecr.us-east-1.amazonaws.com/capstone_app:v1"
           requires:
             - aws-eks/create-cluster
       - test-application:
